# tres-en-raya

./: .env.example  .gitignore  .nojekyll  .pre-commit-config.yaml  CHANGELOG.md  CORRECCIONES_REALIZADAS.md  LICENSE.md  README.md  SECURITY.md  TESTS_OBSOLETOS.md  _config.yml  app-github-pages.html  bandit-report-final.json  bandit-report-fixed.json  conftest.py  game.js  github-pages-index.html  index.html  mypy.ini  pip-audit-report.json  play_cli.py  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements-prod.txt  requirements.txt  run_cli.py  run_multiplayer.py  run_multiplayer_server.py  run_web_server.py  setup.cfg  setup.py  style.css  test_additional.py  test_apis.py  test_functionality.py
.github/: PR_TEMPLATE_INFO.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  other.md  question.yml
.github/workflows/: README-OPTIMIZADO.md  README.md  deploy-fixed.yml  deploy.yml  multi-python-test.yml  security.yml  test-pr.yml  test.yml
application/: __init__.py
application/coordinators/: __init__.py
application/entry_points/: __init__.py  run_console.py  run_web.py  web_main.py  web_main_backup.py
config/: development.py  production.py
delivery_mechanisms/: __init__.py
delivery_mechanisms/console_ui/: cli_adapter.py
delivery_mechanisms/web_ui/: flask_adapter.py
delivery_mechanisms/web_ui/templates/: app-github-pages.html
docs/: API_DOCUMENTATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIAS.md  DOMAIN_MODEL.md  ESTRUCTURA.md  README_GITHUB_PAGES.md  REORGANIZACION_ARCHIVOS.md  SCREAMING_ARCHITECTURE.md  SCREAMING_ARCHITECTURE_COMPLETED.md
game/: __init__.py
game/entities/: __init__.py  board.py  game_session.py  player.py
game/rules/: __init__.py  ai_strategy.py  game_rules.py  victory_conditions.py
game/services/: __init__.py  ai_opponent.py  score_calculator.py  statistics_tracker.py
game/use_cases/: __init__.py  check_winner.py  make_move.py  manage_players.py  start_new_game.py
infrastructure/: __init__.py
infrastructure/configuration/: .env.example  __init__.py  _config.yml  config.json  game_config.py
infrastructure/development/: dev.py  pyproject.toml  requirements-dev.txt
infrastructure/development/requirements/: development.txt
infrastructure/external_services/: __init__.py  service_config.py
interfaces/console_ui/: __init__.py
interfaces/web_ui/: __init__.py  flask_adapter.py
interfaces/web_ui/css/: style.css
interfaces/web_ui/js/: game.js
persistence/: __init__.py
persistence/data_sources/: memory_storage.py
persistence/repositories/: __init__.py  game_repository.py
requirements/: ci.txt  production.txt
scripts/: coverage.py  fix_quality.py  quality_check.py
src/core/: board.py  game_engine.py  player.py
src/interfaces/cli/: game_logic.py  main.py
src/interfaces/cli/ui/: console_ui.py
src/interfaces/web/: app.py
src/interfaces/web/routes/: __init__.py  api_routes.py  game_routes.py
src/interfaces/web/static/css/: style.css
src/interfaces/web/static/js/: game.js
src/interfaces/web/static/templates/: github-pages-index.html
src/interfaces/web/templates/: base.html  game.html  index.html
src/local/: game_logic.py  main.py
src/local/ui/: console_ui.py
src/multiplayer/: client.py  server.py  socket_handlers.py
src/utils/: helpers.py
src/web/: app.py
src/web/routes/: __init__.py  api_routes.py  game_routes.py
src/web/static/css/: style.css
src/web/static/js/: game.js
src/web/templates/: game.html  index.html
tests/: test_architecture_compliance.py  test_ci_integration.py  test_game_logic.py  test_helpers.py  test_integration.py  test_multiplayer.py  test_screaming_architecture.py  test_screaming_architecture_validation.py
tests/e2e/: __init__.py  test_complete_user_scenarios.py.disabled
tests/integration/: __init__.py  test_game_flow_integration.py  test_web_integration.py
tests/unit/delivery_mechanisms/: __init__.py  test_adapters.py  test_adapters.py.disabled
tests/unit/game/: __init__.py  test_entities.py  test_rules.py  test_rules.py.disabled  test_services.py.disabled  test_use_cases.py.disabled
