[metadata]
name = tres-en-raya-game
version = 2.0.0
description = A Tic Tac Toe game with local, web, and multiplayer versions with AI opponent
long_description = file: README.md
long_description_content_type = text/markdown
author = Crypt0xDev
author_email = alexis.alvarado@unsm.edu.pe
url = https://github.com/Crypt0xDev/tres-en-raya
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
package_dir = 
    = src
python_requires = >=3.9
install_requires =
    Flask>=2.3.0
    Flask-SocketIO>=5.3.0
    requests>=2.31.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-flask>=1.3.0
dev =
    black>=23.0.0
    flake8>=6.0.0
    isort>=5.12.0

[options.entry_points]
console_scripts =
    tres-en-raya-local = local.main:main
    tres-en-raya-web = web.app:run
    tres-en-raya-multiplayer = multiplayer.server:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short --strict-markers
minversion = 7.0

[coverage:run]
source = src
omit = 
    */tests/*
    */test_*
    */__pycache__/*
    */.*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError